--- a/exercicios_css/exercicio_helloworld/style.css
+++ b/exercicios_css/exercicio_helloworld/style.css
@@ -1,3 +1,9 @@
+ html {
+    font-family: Arial, Helvetica, sans-serif;
+ }
+ 
+ 
+ 
  h1 {
     text-align: center;
     color:white;
@@ -16,4 +22,17 @@
 span {
     color: blue;
     font-weight: bold;
+}
+
+a:link {
+    color: aqua;
+    text-decoration: none;
+
+}
+
+a:visited {
+    color: blueviolet;
+}
+a:hover {
+    text-decoration: underline;
 }
